--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TIAN</title>
   <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css">
+
 </head>
 
 <body>
   <!-- Header -->
   <header>
     <div class="container">
-      <div class="header-inner mt-4 d-flex align-items-center justify-content-between">
+      <div class="header-inner mt-4 d-flex align-items-center justify-content-between col-12">
         <div class="header-logo-box d-flex align-items-center">
-          <img class="header-logo img-fluid" src="./images/header-logo.png" alt="logo" />
-          <p class="header-logo-text m-0 ms-1">tian</p>
+          <img width="73px" class="header-logo img-fluid" src="./images/header-logo.png" alt="logo" />
         </div>
 
-        <nav>
+
+        <i class="fa-solid fa-bars d-block d-md-none"></i>
+
+        <nav class="d-md-flex d-none">
           <ul class="d-flex">
             <li class="list-group-item ms-3">
               <a class="nav-a text-decoration-none" href="#"> Home </a>
@@ -39,7 +45,7 @@
           </ul>
         </nav>
 
-        <div class="header-end d-flex">
+        <div class="header-end d-md-flex d-none align-items-center">
           <div class="h-button d-flex align-items-center justify-content-center">
             <div class="h-button-left col-6 d-flex  align-items-center justify-content-center">
               <img class="h-button-img img-fluid " src="./images/sun.png" alt="sun" />
@@ -50,6 +56,8 @@
           <!-- Header button -->
           <button class="h-m-button text-white ms-4">Button</button>
         </div>
+
+
       </div>
     </div>
   </header>
@@ -60,56 +68,60 @@
     <div class="container">
       <div class="hero-inner d-flex justify-content-between col-12 mt-5">
         <!-- Left -->
-        <div class="hero-left col-6">
+        <div class="hero-left col-xl-6 col-12 d-xl-block d-flex justify-content-center align-items-center flex-wrap">
 
-          <div class="hero-left-top d-flex">
-            <p class="hero-title col-12">
+          <div class="hero-left-top">
+            <p class="hero-title col-12 text-center text-xl-start">
               PRODUCT
               DESIGNER
             </p>
           </div>
 
           <div>
-            <p class="hero-text col-12">
+            <p class="hero-text col-12 text-center text-xl-start">
               CRISTIAN MUÑOZ
             </p>
           </div>
-          <div class="hero-left-bottom pt-5">
+          <div
+            class="hero-left-bottom pt-5 col-12 d-flex flex-wrap justify-content-center align-items-center justify-content-xl-start">
 
-            <div class="d-flex justify-content-between mb-5 col-10">
-              <div class="logo-box d-flex align-items-center justify-content-center">
-                <img src="./images/instagram.svg" alt="instagram">
-              </div>
+            <ul class="d-flex justify-content-between mb-5 col-10 p-0">
+              <li class="logo-box d-flex align-items-center justify-content-center list-group-item">
+                <a class="text-decoration-none" href="#"><img src="./images/instagram.svg" alt="instagram"></a>
+              </li>
 
-              <div class="logo-box d-flex align-items-center justify-content-center">
-                <img src="./images/Figma.svg" alt="Figma">
-              </div>
+              <li class="logo-box d-flex align-items-center justify-content-center list-group-item">
+                <a class="text-decoration-none" href="#"><img src="./images/Figma.svg" alt="figma"></a>
+              </li>
 
 
               <div class="logo-box d-flex align-items-center justify-content-center">
                 <div class="linkedin-box d-flex align-items-center justify-content-center">
-                  <img src="./images/linkedin.svg" alt="Linkedin">
+                  <li class="d-flex align-items-center justify-content-center list-group-item">
+                    <a class="text-decoration-none" href="#"><img src="./images/linkedin.svg" alt="linkedin"></a>
+                  </li>
                 </div>
               </div>
 
-              <div class="logo-box d-flex align-items-center justify-content-center">
-                <img src="./images/twitter.svg" alt="Twitter">
-              </div>
+              <li class="logo-box d-flex align-items-center justify-content-center list-group-item">
+                <a class="text-decoration-none" href="#"><img src="./images/twitter.svg" alt="twitter"></a>
+              </li>
 
 
-              <div class="logo-box d-flex align-items-center justify-content-center">
-                <img src="./images/telegram.svg" alt="Telegram">
-              </div>
+              <li class="logo-box d-flex align-items-center justify-content-center list-group-item">
+                <a class="text-decoration-none" href="#"><img src="./images/telegram.svg" alt="telegram"></a>
+              </li>
 
 
-              <div class="logo-box d-flex align-items-center justify-content-center">
-                <img src="./images/Medium Logo.svg" alt="Medium">
-              </div>
+              <li class="logo-box d-flex align-items-center justify-content-center list-group-item">
+                <a class="text-decoration-none" href="#"><img src="./images/Medium Logo.svg" alt="medium"></a>
+              </li>
 
-            </div>
+            </ul>
 
-            <button class="hero-btn col-12">
+            <button class="hero-btn col-10">
               Download Curriculum Vitae
+              <img width="20px" src="./images/arrow-down.png" alt="down">
             </button>
 
           </div>
@@ -121,7 +133,7 @@
 
         <!-- Right -->
 
-        <div class="hero-right col-5 d-flex align-items-center justify-content-center">
+        <div class="hero-right col-xl-5 d-none align-items-center justify-content-center d-xl-flex col-0">
 
           <img class="hero-img img-fluid" src="./images/Hero-img.png" alt="hero-img">
 
@@ -131,6 +143,320 @@
     </div>
   </section>
 
+  <!-- First Sec -->
+
+  <section class="first-sec">
+    <div class="container">
+      <div
+        class="first-sec-inner d-flex align-items-center justify-content-between pb-5 pt-5 pe-lg-3 pe-xl-5 pe-sm-2 flex-wrap flex-sm-nowrap">
+
+        <div class="upwork col-sm-4 col-12 mt-sm-0 mt-5 text-center">
+          <p class="upwork-number m-0">90%</p>
+          <p class="upwork-text fw-bold m-0">Job Success
+            Score on Upwork</p>
+        </div>
+
+        <div class="d-xl-block d-none">
+          <img width="70px" src="./images/Dawn.png" alt="">
+        </div>
+
+        <div class="upwork col-sm-4 col-12 mt-sm-0 mt-5 text-center">
+          <p class="upwork-number m-0"> >25.000</p>
+          <p class="upwork-text fw-bold m-0">Duplicates on Figma
+            Community</p>
+        </div>
+
+        <div class="d-xl-block d-none">
+          <img width="70px" src="./images/Dawn.png" alt="">
+        </div>
+
+
+        <div class="upwork col-sm-3 col-12 mt-sm-0 mt-5 text-center">
+          <p class="upwork-number m-0"> >2K </p>
+          <p class="upwork-text fw-bold m-0">In Finished
+            Works</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Cards Sec -->
+
+  <section class="cards-sec">
+    <div class="container">
+      <div class="cards-sec-inner">
+
+        <p class="c-s-title text-center text-xxl-start">PORTFOLIO</p>
+
+        <!-- Top -->
+        <div class="c-s-inner-top d-flex gap-3 flex-xxl-nowrap flex-wrap justify-content-center">
+
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+        </div>
+
+
+        <!-- Bottom -->
+        <div class="c-s-inner-bottom d-none d-xxl-flex gap-3 flex-xxl-nowrap flex-wrap justify-content-center mt-4">
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+
+
+
+          <div class="c-s-card-box d-flex flex-wrap align-items-center justify-content-center pt-4 pb-4">
+            <div class="c-s-card-top">
+              <img width="280px" src="./images/Card-img.png" alt="card-img">
+              <h2 class="c-s-card-title mt-3">Mi portal U</h2>
+            </div>
+
+
+            <div class="c-s-card-center d-flex align-items-center pe-4 gap-2 mb-2">
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">UX Design</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">University</a>
+              </div>
+
+              <div class="c-s-card-a-box d-flex align-items-center justify-content-center">
+                <a class="c-s-card-a text-decoration-none" href="#">JavaScript</a>
+              </div>
+            </div>
+
+            <div class="c-s-card-bottom">
+              <button class="c-s-card-btn d-flex justify-content-center align-items-center">
+                Figma community
+              </button>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+  </script>
 
 </html>
