--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
   </section>
 
-  <!-- First Sec -->
+  <!-- First Section -->
 
   <section class="first-sec">
     <div class="container">
@@ -182,7 +182,7 @@
   </section>
 
 
-  <!-- Cards Sec -->
+  <!-- Cards Section -->
 
   <section class="cards-sec">
     <div class="container">
